--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "server":"nodemon index.js",
-    "build": "npm install  && npm install  --prefix ./client && npm run build --prefix ./client && npm run build"
-
+    "server":"node index.js",
+    "build": "npm install && npm run build"
   },
   "author": "",
   "license": "ISC",
