--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "server":"node index.js",
-    "build": "npm install && npm run build"
+    "build": "npm install  && npm install  --prefix client && npm run build --prefix client"
   },
   "author": "",
   "license": "ISC",
