--- a/Server/package.json
+++ b/Server/package.json
@@ -3,9 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "server":"node index.js",
-    "build": "npm install  && npm install  --prefix ./client && npm run build --prefix ./client"
+    "server":"nodemon index.js",
+    "build": "npm install  --prefix ./client && npm run build --prefix ./client && npm install"
   },
   "author": "",
   "license": "ISC",
