--- a/Server/package.json
+++ b/Server/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "server":"nodemon index.js",
-    "build": "npm install  --prefix ./client && npm run build --prefix ./client && npm install"
+"build": "npm install && npm install --prefix ./server/client && npm run build --prefix ./server/client"
   },
   "author": "",
   "license": "ISC",
