--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "scripts": {
     "server":"nodemon index.js",
-"build": "npm install && npm install --prefix ./server/client && npm run build --prefix ./server/client"
+    "build": "npm install --prefix ./server && npm install --prefix ./server/client && npm run build --prefix ./server/client"
+  
   },
   "author": "",
   "license": "ISC",
