--- a/Server/package.json
+++ b/Server/package.json
@@ -3,9 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "server":"nodemon index.js",
-    "build": "npm install "
-  
+    "server": "nodemon index.js",
+    "build": "npm install"
   },
   "author": "",
   "license": "ISC",
@@ -13,9 +12,12 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "install": "^0.13.0",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
+    "npm": "^10.9.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1"
   }
