--- a/Server/package.json
+++ b/Server/package.json
@@ -16,6 +16,7 @@
     "express": "^4.21.1",
     "install": "^0.13.0",
     "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.8.1",
     "multer": "^1.4.5-lts.1",
     "npm": "^10.9.0",
     "swagger-jsdoc": "^6.2.8",
